# WordToVec-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: NeuralNetworkTest.c  SemanticDataSetTest.c
src/: CMakeLists.txt  Iteration.c  Iteration.h  NeuralNetwork.c  NeuralNetwork.h  SemanticDataSet.c  SemanticDataSet.h  Vocabulary.c  Vocabulary.h  VocabularyWord.c  VocabularyWord.h  WordPair.c  WordPair.h  WordToVecParameter.c  WordToVecParameter.h
